[tool.poetry]
name = "sidechain-launch-kit"
version = "0.0.0"
description = "Python scripts to tests and explore side chains"
readme = "README.md"
repository = "https://https://github.com/xpring-eng/sidechain-launch-kit"
authors = [
  "Mayukha Vadari <mvadari@ripple.com>",
  "Scott Determan <determan@ripple.com>"
]
keywords = [
  "xrp",
  "xrpl",
  "cryptocurrency",
  "blockchain",
  "sidechain"
]
license = "MIT"
documentation = "README.md"
include = [
  "LICENSE",
]
packages = [
  { include = "slk" },
]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.9"
attrs = "^21.2.0"
iniconfig = "^1.1.1"
packaging = "^21.0"
pluggy = "^1.0.0"
py = "^1.10.0"
pyparsing = "^2.4.7"
pytest = "^6.2.5"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
six = "^1.16.0"
toml = "^0.10.2"
websockets = "^9.1"
xrpl-py = { git = "https://github.com/XRPLF/xrpl-py.git", branch = "sidechain" }
python-dotenv = "^0.19.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-docstrings = "^1.5.0"
mypy = "^0.790"
isort = "^5.7.0"
flake8-isort = "^4.0.0"
flake8-annotations = "^2.5.0"
flake8-absolute-import = "^1.0"
darglint = "^1.5.8"

[tool.isort]
# Make sure that isort's settings line up with black
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
