[tool.poetry]
name = "sidechain-launch-kit"
version = "0.0.0"
description = "Python scripts to tests and explore side chains"
readme = "README.md"
repository = "https://https://github.com/xpring-eng/sidechain-launch-kit"
authors = [
  "Mayukha Vadari <mvadari@ripple.com>",
  "Scott Determan <determan@ripple.com>"
]
keywords = [
  "xrp",
  "xrpl",
  "cryptocurrency",
  "blockchain",
  "sidechain"
]
license = "MIT"
documentation = "README.md"
include = [
  "LICENSE",
]
packages = [
  { include = "slk" },
]

[tool.poetry.scripts]
sidechain-shell = "slk.run_shell:main"
sidechain-config = "slk.create_config_files:main"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"
pytest = "^6.2.5"
websockets = "^9.1"
xrpl-py = "^1.3.0"
python-dotenv = "^0.19.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-docstrings = "^1.5.0"
mypy = "^0.790"
isort = "^5.7.0"
flake8-isort = "^4.0.0"
flake8-annotations = "^2.5.0"
flake8-absolute-import = "^1.0"
darglint = "^1.5.8"

[tool.isort]
# Make sure that isort's settings line up with black
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
