[tool.poetry]
name = "sidechain-launch-kit"
version = "1.0.0-beta.1"
description = "Python scripts to tests and explore side chains"
readme = "README.md"
repository = "https://github.com/xpring-eng/sidechain-launch-kit"
authors = [
  "Mayukha Vadari <mvadari@ripple.com>",
  "Scott Determan <determan@ripple.com>"
]
keywords = [
  "xrp",
  "xrpl",
  "cryptocurrency",
  "blockchain",
  "sidechain"
]
license = "MIT"
include = [
  "LICENSE",
]
packages = [
  { include = "slk" },
]

[tool.poetry.scripts]
sidechain-launch = "slk.launch.sidechain_launch:main"
sidechain-config = "slk.config:create_config_files"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
pytest = "^6.2.5"
xrpl-py = "^1.3.0"
python-dotenv = ">=0.19.1,<0.21.0"
tabulate = "^0.8.9"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^22.3.0"
flake8-black = "^0.3.5"
flake8-docstrings = "^1.5.0"
mypy = "^0.942"
isort = "^5.7.0"
flake8-isort = "^4.0.0"
flake8-annotations = "^2.5.0"
flake8-absolute-import = "^1.0"
darglint = "^1.5.8"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^0.5.1"
myst-parser = "^0.17.0"
docutils = "0.17"
pytest-cov = "^3.0.0"
types-tabulate = "^0.8.6"

[tool.isort]
# Make sure that isort's settings line up with black
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
